--- a/src/main/resources/assets/ddvgames/lang/en_us.json
+++ b/src/main/resources/assets/ddvgames/lang/en_us.json
@@ -1,7 +1,11 @@
 {
-  "ddv.command.feedback.set_game": "Minigame set to: %s",
-  "ddv.command.feedback.get_game": "Minigame currently set to: %s",
+  "ddv.minigame.rising_edge": "Rising Edge",
+
+  "ddv.command.feedback.set_game": "Minigame set to: %s %s",
+  "ddv.command.feedback.get_game": "Minigame currently set to: %s %s",
+  "ddv.command.feedback.get_game_none": "No minigame is currently set!",
   "ddv.command.feedback.getSettingVal": "Setting %s is currently set to: %s",
+  "ddv.command.feedback.setSettingVal": "Set Setting %s to: %s",
   "ddv.command.feedback.start_game": "Started minigame %s!",
   "ddv.command.feedback.stop_game": "Stopped minigame %s.",
 
@@ -9,5 +13,13 @@
   "ddv.command.exception.invalid_setting": "The setting %s could not be found!",
   "ddv.command.exception.not_running": "Couldn't stop minigame (No minigame is running)",
   "ddv.command.exception.running": "Couldn't edit minigame settings (Minigame is running)",
-  "ddv.command.exception.no_game": "Couldn't edit minigame settings (No minigame is selected)"
+  "ddv.command.exception.running_set": "Couldn't set minigame (Minigame is running)",
+  "ddv.command.exception.no_game": "Couldn't edit minigame settings (No minigame is selected)",
+
+  "ddv.semanticVersioning.prefix": "v",
+  "ddv.semanticVersioning.suffixes.none": "",
+  "ddv.semanticVersioning.suffixes.beta": "b",
+  "ddv.semanticVersioning.suffixes.alpha": "a",
+  "ddv.semanticVersioning.suffixes.snapshot": "-SNAPSHOT",
+  "ddv.semanticVersioning.suffixes.test": "-TEST"
 }
