--- a/src/main/resources/assets/ddvgames/lang/en_us.json
+++ b/src/main/resources/assets/ddvgames/lang/en_us.json
@@ -2,27 +2,28 @@
   "ddv.minigame.rising_edge": "Rising Edge",
   "ddv.minigame.rising_edge.win_title": "%s has won!",
 
-  "ddv.command.feedback.set_game": "Minigame set to: %s %s",
-  "ddv.command.feedback.get_game": "Minigame currently set to: %s %s",
+  "ddv.command.feedback.set_game": "Loaded Minigame: %s %s",
+  "ddv.command.feedback.get_game": "Minigame currently loaded: %s %s",
   "ddv.command.feedback.get_game_none": "No minigame is currently set!",
-  "ddv.command.feedback.getSettingVal": "Setting %s is currently set to: %s",
-  "ddv.command.feedback.setSettingVal": "Set setting %s to: %s",
+  "ddv.command.feedback.getSettingVal": "Setting '%s' is currently set to: %s",
+  "ddv.command.feedback.setSettingVal": "Set setting '%s' to: %s",
   "ddv.command.feedback.start_game": "Started minigame %s!",
+  "ddv.command.feedback.quickstart_game": "Quickstarted minigame %s! {%s}",
   "ddv.command.feedback.stop_game": "Stopped minigame %s.",
   "ddv.command.feedback.added_players": "Added Players Successfully.",
   "ddv.command.feedback.removed_players": "Removed Players Successfully.",
   "ddv.command.feedback.cleared_players": "Cleared Players Successfully.",
   "ddv.command.feedback.get_players": "There are %s player(s) currently in the minigame: %s",
   "ddv.command.feedback.get_players_role": "There are %s player(s) currently with role %s: %s",
-  "ddv.command.feedback.get_player_role": "Player %s has role %s",
+  "ddv.command.feedback.get_player_role": "Player %s has role '%s'",
   "ddv.command.feedback.player_has_no_role": "Player %s has no role!",
-  "ddv.command.feedback.add_players_role": "Added role %s to player(s) successfully",
+  "ddv.command.feedback.add_players_role": "Added role '%s' to player(s) successfully",
   "ddv.command.feedback.remove_players_role": "Removed player(s) from all roles.",
 
   "ddv.minigame.start.unsupportedDimension": "Playing Minigames outside of the Overworld is not guaranteed to work. This may be supported in the future, but for now I recommend staying in the Overworld.",
 
   "ddv.command.exception.invalid_game": "The minigame %s could not be found!",
-  "ddv.command.exception.invalid_setting": "The setting %s could not be found!",
+  "ddv.command.exception.invalid_setting": "The setting '%s' could not be found!",
   "ddv.command.exception.not_running": "Couldn't stop minigame (No minigame is running)",
   "ddv.command.exception.running": "Couldn't edit minigame settings (Minigame is running)",
   "ddv.command.exception.running_set": "Couldn't set minigame (Minigame is running)",
